crates/bindings/c/grafeo.h

/* ---- Status codes -------------------------------------------------------- */

typedef enum {
    GRAFEO_OK                  = 0,
    GRAFEO_ERROR_DATABASE      = 1,
    GRAFEO_ERROR_QUERY         = 2,
    GRAFEO_ERROR_TRANSACTION   = 3,
    GRAFEO_ERROR_STORAGE       = 4,
    GRAFEO_ERROR_IO            = 5,
    GRAFEO_ERROR_SERIALIZATION = 6,
    GRAFEO_ERROR_INTERNAL      = 7,
    GRAFEO_ERROR_NULL_POINTER  = 8,
    GRAFEO_ERROR_INVALID_UTF8  = 9
} GrafeoStatus;
/* ---- Transaction isolation levels ---------------------------------------- */

typedef enum {
    GRAFEO_ISOLATION_READ_COMMITTED = 0,
    GRAFEO_ISOLATION_SNAPSHOT       = 1,
    GRAFEO_ISOLATION_SERIALIZABLE   = 2
} GrafeoIsolationLevel;
/* ---- Opaque types -------------------------------------------------------- */

typedef struct GrafeoDatabase    GrafeoDatabase;
typedef struct GrafeoTransaction GrafeoTransaction;
typedef struct GrafeoResult      GrafeoResult;
typedef struct GrafeoEdge        GrafeoEdge;
/* ---- Error handling ------------------------------------------------------ */

const char* grafeo_last_error(void);
void        grafeo_clear_error(void);
/* ---- Change Data Capture ------------------------------------------------- */

void grafeo_set_cdc_enabled(GrafeoDatabase* db, bool enabled);
bool grafeo_is_cdc_enabled(GrafeoDatabase* db);
GrafeoStatus grafeo_set_edge_property(GrafeoDatabase* db, uint64_t id, const char* key, const char* value_json);
int32_t      grafeo_remove_edge_property(GrafeoDatabase* db, uint64_t id, const char* key);
uint64_t    grafeo_edge_id(const GrafeoEdge* edge);
uint64_t    grafeo_edge_source_id(const GrafeoEdge* edge);
uint64_t    grafeo_edge_target_id(const GrafeoEdge* edge);
const char* grafeo_edge_type(const GrafeoEdge* edge);
const char* grafeo_edge_properties_json(const GrafeoEdge* edge);
void        grafeo_free_edge(GrafeoEdge* edge);
/* ---- Property indexes ---------------------------------------------------- */

GrafeoStatus grafeo_create_property_index(GrafeoDatabase* db, const char* property);
int32_t      grafeo_drop_property_index(GrafeoDatabase* db, const char* property);
int32_t      grafeo_has_property_index(GrafeoDatabase* db, const char* property);
GrafeoStatus grafeo_find_nodes_by_property(GrafeoDatabase* db, const char* property, const char* value_json, uint64_t** out_ids, size_t* out_count);
void         grafeo_free_node_ids(uint64_t* ids, size_t count);
/* ---- Vector operations --------------------------------------------------- */

GrafeoStatus grafeo_create_vector_index(GrafeoDatabase* db, const char* label, const char* property, int32_t dimensions, const char* metric, int32_t m, int32_t ef_construction);
int32_t      grafeo_drop_vector_index(GrafeoDatabase* db, const char* label, const char* property);
GrafeoStatus grafeo_rebuild_vector_index(GrafeoDatabase* db, const char* label, const char* property);
GrafeoStatus grafeo_vector_search(GrafeoDatabase* db, const char* label, const char* property, const float* query, size_t query_len, size_t k, int32_t ef, uint64_t** out_ids, float** out_distances, size_t* out_count);
GrafeoStatus grafeo_mmr_search(GrafeoDatabase* db, const char* label, const char* property, const float* query, size_t query_len, size_t k, int32_t fetch_k, float lambda, int32_t ef, uint64_t** out_ids, float** out_distances, size_t* out_count);
/* Requires vector-index feature. *out_ids has *out_count entries; free with grafeo_free_node_ids(*out_ids, *out_count). */
GrafeoStatus grafeo_batch_create_nodes(GrafeoDatabase* db, const char* label, const char* property, const float* vectors, size_t vector_count, size_t dimensions, uint64_t** out_ids, size_t* out_count);
void         grafeo_free_vector_results(uint64_t* ids, float* distances, size_t count);
/* ---- Statistics ---------------------------------------------------------- */

size_t grafeo_node_count(GrafeoDatabase* db);
size_t grafeo_edge_count(GrafeoDatabase* db);
/* ---- Transactions -------------------------------------------------------- */

GrafeoTransaction* grafeo_begin_transaction(GrafeoDatabase* db);
GrafeoTransaction* grafeo_begin_transaction_with_isolation(GrafeoDatabase* db, GrafeoIsolationLevel isolation);
GrafeoResult*      grafeo_transaction_execute(GrafeoTransaction* tx, const char* query);
GrafeoResult*      grafeo_transaction_execute_with_params(GrafeoTransaction* tx, const char* query, const char* params_json);
/* Execute in a specific language within a transaction; params_json may be NULL. */
GrafeoResult*      grafeo_transaction_execute_language(GrafeoTransaction* tx, const char* language, const char* query, const char* params_json);
GrafeoStatus       grafeo_commit(GrafeoTransaction* tx);
GrafeoStatus       grafeo_rollback(GrafeoTransaction* tx);
void               grafeo_free_transaction(GrafeoTransaction* tx);
/* ---- Admin --------------------------------------------------------------- */

char*        grafeo_info(GrafeoDatabase* db);
GrafeoStatus grafeo_save(GrafeoDatabase* db, const char* path);
GrafeoStatus grafeo_wal_checkpoint(GrafeoDatabase* db);
GrafeoStatus grafeo_compact(GrafeoDatabase* db);
/* ---- Memory management --------------------------------------------------- */

void grafeo_free_string(char* s);