crates/bindings/csharp/src/Grafeo/Native/NativeMethods.cs


    /// <summary>Set a property on an edge.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_set_edge_property(nint db, ulong id, string key, string valueJson);

    /// <summary>Remove a property from an edge. Returns 1 if removed, 0 if not found.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_remove_edge_property(nint db, ulong id, string key);

    /// <summary>Free a GrafeoEdge.</summary>
    [LibraryImport(LibName)]
    internal static partial void grafeo_free_edge(nint edge);

    /// <summary>Access edge ID.</summary>
    [LibraryImport(LibName)]
    internal static partial ulong grafeo_edge_id(nint edge);

    /// <summary>Access source node ID.</summary>
    [LibraryImport(LibName)]
    internal static partial ulong grafeo_edge_source_id(nint edge);

    /// <summary>Access target node ID.</summary>
    [LibraryImport(LibName)]
    internal static partial ulong grafeo_edge_target_id(nint edge);

    /// <summary>Access edge type string. Valid until grafeo_free_edge.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_edge_type(nint edge);

    /// <summary>Access edge properties JSON. Valid until grafeo_free_edge.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_edge_properties_json(nint edge);

    // =========================================================================
    // Indexes
    // =========================================================================

    /// <summary>Create a property index on a property key.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_create_property_index(nint db, string property);

    /// <summary>Drop a property index.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_drop_property_index(nint db, string property);

    /// <summary>Check if a property index exists. Returns 1 if exists, 0 if not.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_has_property_index(nint db, string property);

    /// <summary>Find nodes by property value. Writes IDs and count to out pointers.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_find_nodes_by_property(
        nint db, string property, string valueJson,
        out nint idsOut, out nuint countOut);

    /// <summary>Free node IDs returned by grafeo_find_nodes_by_property.</summary>
    [LibraryImport(LibName)]
    internal static partial void grafeo_free_node_ids(nint ids, nuint count);

    // =========================================================================
    // Vector Search
    // =========================================================================

    /// <summary>Create a vector index.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_create_vector_index(
        nint db, string label, string property,
        int dimensions, string metric, int m, int efConstruction);

    /// <summary>Drop a vector index.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_drop_vector_index(nint db, string label, string property);

    /// <summary>Rebuild a vector index.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_rebuild_vector_index(nint db, string label, string property);

    /// <summary>Perform a vector search.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static unsafe partial int grafeo_vector_search(
        nint db, string label, string property,
        float* query, nuint queryLen, nuint k, uint ef,
        out nint idsOut, out nint distsOut, out nuint countOut);

    /// <summary>Perform an MMR search.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static unsafe partial int grafeo_mmr_search(
        nint db, string label, string property,
        float* query, nuint queryLen, nuint k,
        int fetchK, float lambda, int ef,
        out nint idsOut, out nint distsOut, out nuint countOut);

    /// <summary>Free vector search results.</summary>
    [LibraryImport(LibName)]
    internal static partial void grafeo_free_vector_results(nint ids, nint dists, nuint count);

    // =========================================================================
    // Batch Operations
    // =========================================================================

    /// <summary>Batch create nodes with vector properties.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static unsafe partial int grafeo_batch_create_nodes(
        nint db, string label, string property,
        float* vectors, nuint vectorCount, nuint dimensions,
        out nint outIds, out nuint outCount);

    // =========================================================================
    // Admin
    // =========================================================================

    /// <summary>Get the number of nodes.</summary>
    [LibraryImport(LibName)]
    internal static partial nuint grafeo_node_count(nint db);

    /// <summary>Get the number of edges.</summary>
    [LibraryImport(LibName)]
    internal static partial nuint grafeo_edge_count(nint db);

    /// <summary>Get database info as JSON. Caller must free with grafeo_free_string.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_info(nint db);

    /// <summary>Save database to path.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_save(nint db, string path);

    /// <summary>Checkpoint the WAL.</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_wal_checkpoint(nint db);

    /// <summary>Clear all cached query plans.</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_clear_plan_cache(nint db);

    // =========================================================================
    // Backup / Restore
    // =========================================================================

    /// <summary>Create a full backup at the given path.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_backup_full(nint db, string path);

    /// <summary>Create an incremental backup at the given path.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_backup_incremental(nint db, string path);

    /// <summary>Restore database to a specific epoch from a backup directory.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_restore_to_epoch(string backupDir, ulong epoch, string outputPath);

    // =========================================================================
    // Maintenance
    // =========================================================================

    /// <summary>Compact the database store.</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_compact(nint db);

    // =========================================================================
    // Projections
    // =========================================================================

    /// <summary>Create a named graph projection from label/type filters.
    /// All string pointers are manually marshalled to avoid source-gen issues
    /// with mixed string + pointer parameters.</summary>
    [LibraryImport(LibName)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static unsafe partial bool grafeo_create_projection(
        nint db, nint name,
        nint nodeLabels, nuint numLabels,
        nint edgeTypes, nuint numTypes);

    /// <summary>Drop a named graph projection. Returns true if it existed.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static partial bool grafeo_drop_projection(nint db, string name);

    /// <summary>List all projections as JSON. Caller must free with grafeo_free_string.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_list_projections(nint db);

    // =========================================================================
    // Change Data Capture
    // =========================================================================

    /// <summary>Enable or disable CDC tracking.</summary>
    [LibraryImport(LibName)]
    internal static partial void grafeo_set_cdc_enabled(nint db, [MarshalAs(UnmanagedType.U1)] bool enabled);

    /// <summary>Check if CDC is enabled.</summary>
    [LibraryImport(LibName)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static partial bool grafeo_is_cdc_enabled(nint db);

    // =========================================================================
    // Transactions
    // =========================================================================

    /// <summary>Begin a new transaction. Returns null on error.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_begin_transaction(nint db);

    /// <summary>Begin a transaction with a specific isolation level (0=ReadCommitted, 1=Snapshot, 2=Serializable).</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_begin_transaction_with_isolation(nint db, int isolationLevel);

    /// <summary>Execute a query within a transaction.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_transaction_execute(nint tx, string query);

    /// <summary>Execute a query with parameters within a transaction.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_transaction_execute_with_params(nint tx, string query, string paramsJson);

    /// <summary>Execute a query in any language within a transaction.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_transaction_execute_language(nint tx, string language, string query, string? paramsJson);

    /// <summary>Commit a transaction.</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_commit(nint tx);

    /// <summary>Rollback a transaction.</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_rollback(nint tx);

    /// <summary>Free a transaction handle.</summary>
    [LibraryImport(LibName)]
    internal static partial void grafeo_free_transaction(nint tx);

    // =========================================================================
    // Error Handling
    // =========================================================================

    /// <summary>Get the last error message. Valid until next FFI call on this thread. Do NOT free.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_last_error();

    /// <summary>Clear the last error.</summary>
    [LibraryImport(LibName)]
    internal static partial void grafeo_clear_error();

    /// <summary>Free a string returned by the API (info, labels, etc.).</summary>
    [LibraryImport(LibName)]
    internal static partial void grafeo_free_string(nint str);
}
